@@ -10,7 +10,6 @@ DESIGN
 new spinner design:
 - color that ties spinner to manipulator isn't visible until you mouse over
 - should there be a color change or other feedback when pressed?
-- should the background (top/bottom) behind the number change color on mouse over?
 - should we use images files for buttons?
 
 HIGH
